--- a/01-variables.yml
+++ b/01-variables.yml
@@ -4,8 +4,8 @@
     a: 4
     b: 5
   tasks:
-  - name: addition
+  - name: multiplication
     ansible.builtin.debug: 
       msg:
-      - " the sum of 2 numbers: {{a+b}} "
+      - " the sum of 2 numbers: {{a*b}} "
      
