--- a/02-variables.yml
+++ b/02-variables.yml
@@ -12,3 +12,60 @@
   - name: print variables
     ansible.builtin.debug:
       msg: "Hello, I am learning {{COURSE}}, Trainer is {{TRAINER}}, Duration is {{DURATION}}, topic is {{PRESENT}}"
+---
+- name: variables from files
+  hosts: localhost #managing the ansible server itself
+  vars_files:
+  - variables.yaml
+  tasks:
+  - name: printing variables
+    ansible.builtin.debug:
+      msg: "We are learning {{NAME}}, Duration is: {{DURATION}}, Trainer is: {{TRAINER}}"
+---
+
+- name: variables from prompt
+  hosts: localhost
+  vars_prompt:
+  - name: USERNAME
+    prompt: Please enter your username
+    private: false # you can see the value entered on screen
+  - name: PASSWORD
+    prompt: Please enter your password
+    private: true # you can't see the value entered on screen
+  tasks:
+  - name: print variable values
+    ansible.builtin.debug:
+      msg: "username: {{USERNAME}}, password: {{PASSWORD}}"
+---
+- name: variables at task level
+  hosts: localhost
+  # these variables of parent or play level
+  vars:
+  - money: "10000 RS"
+    land: "100 hectars"
+  tasks:
+  - name: inherit values from play
+    ansible.builtin.debug:
+      msg: "MONEY: {{money}}, LAND: {{land}}"
+  - name: inherit values from play and add and override
+    vars:
+    - money: "200000 RS"
+      houses: "3 houses"
+    ansible.builtin.debug:
+      msg: "MONEY: {{money}}, LAND: {{land}}, houses: {{houses}}"
+---
+
+- name: variables from inventory
+  hosts: mongodb
+  tasks:
+  - name: print mongodb username
+    ansible.builtin.debug:
+     msg: "username is: {{MONGO_USERNAME}}"
+---
+
+- name: variables from command line
+   hosts: localhost
+   tasks:
+   - name: print variable from command line
+     ansible.builtin.debug:
+      msg: "The value of variable course is {{COURSE}}"
