--- a/04-condition.yml
+++ b/04-condition.yml
@@ -7,4 +7,4 @@
     # ignore_errors: true
     ansible.builtin.command: id roboshop
     register: user #output is variable name
-   
+    ignore_errors: true
