--- a/ansible-role/main.yml
+++ b/ansible-role/main.yml
@@ -1,5 +1,5 @@
 - name: installing roboshop
-  hosts: "{{component}}"
+  hosts: catalogue
   become: yes
   roles:
-  - "{{component}}"
+  - catalogue
