--- a/ansible-role/roles/catalogue/tasks/main.yml
+++ b/ansible-role/roles/catalogue/tasks/main.yml
@@ -1,4 +1,7 @@
-- name: Install NodeJS
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: nodejs
+ - name: setup NPM source
+   ansible.builtin.shell: "curl -sL https://rpm.nodesource.com/setup_lts.x | bash"
+
+ - name: Install NodeJS
+   ansible.builtin.yum:
+      name: nodejs
+      state: installed
