--- a/ansible-role/roles/catalogue/tasks/main.yml
+++ b/ansible-role/roles/catalogue/tasks/main.yml
@@ -1,7 +1,9 @@
- - name: setup NPM source
-   ansible.builtin.shell: "curl -sL https://rpm.nodesource.com/setup_lts.x | bash"
+- name: Install NodeJS
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs
 
- - name: Install NodeJS
-   ansible.builtin.yum:
-      name: nodejs
-      state: installed
+- name: Install app-setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: app-setup
