--- a/ansible-configuration/abc.yml
+++ b/ansible-configuration/abc.yml
@@ -2,6 +2,4 @@
   hosts: centos
   tasks: 
   - name: print env
-    ansible.builtin.debug:
-      msg: echo "Hi i am vijay" > /tmp/vijay.txt
-      
+    ansible.builtin.shell: echo Hi i am vijay > /tmp/vijay.txt
