--- a/ansible-configuration/ansible.cfg
+++ b/ansible-configuration/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 remote_user =centos
-private_key_file = /root/avinash.pem
+private_key_file = //home/centos/avinash.pem
 inventory = inventory
