--- a/ansible-configuration/abc.yml
+++ b/ansible-configuration/abc.yml
@@ -1,5 +1,5 @@
-- name: ansible configuration Demo
-  hosts: centos
+- name: ansible configuration Demo1
+  hosts: linux
   tasks: 
-  - name: print env
+  - name: print environment variable
     ansible.builtin.shell: echo Hi i am vijay > /tmp/vijay.txt
