--- a/multi-env/PROD/ansible.cfg
+++ b/multi-env/PROD/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 remote_user = ec2-user
 private_key_file = /home/centos/avinash.pem
-inventory = mongodb
+inventory = /home/centos/ansible-lab/multi-env/PROD
